<resources>
    <string name="app_name">DoodleApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_background_color">Background</string>
    <string name="action_delete">Delete</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_opacity">Opacity</string>
    <string name="action_color">Color Picker</string>
    <string name="action_brush">Brush Size</string>
    <string name="delete_drawing">Delete Doodle</string>
    <string name="new_drawing_warning">Do you want to delete the doodle?</string>
    <string name="label_brush_size">Brush Size:</string>
</resources>